--- a/src/CoreOS k8s Cluster/Base.lproj/MainMenu.xib
+++ b/src/CoreOS k8s Cluster/Base.lproj/MainMenu.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="7515.2" systemVersion="14C109" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6751" systemVersion="14D87p" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="7515.2"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6751"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="NSApplication">
@@ -685,12 +685,6 @@
                     </connections>
                 </menuItem>
                 <menuItem isSeparatorItem="YES" id="jV7-Ne-Ped"/>
-                <menuItem title="OS shell" id="YiP-H1-GtD" userLabel="OS shell">
-                    <modifierMask key="keyEquivalentModifierMask"/>
-                    <connections>
-                        <action selector="open_shell:" target="494" id="Y99-xn-ZUH"/>
-                    </connections>
-                </menuItem>
                 <menuItem title="SSH to k8smaster-01" id="dvF-TI-XNx">
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <connections>
@@ -709,6 +703,13 @@
                         <action selector="runSsh3:" target="494" id="deR-gE-bQ0"/>
                     </connections>
                 </menuItem>
+                <menuItem isSeparatorItem="YES" id="B1N-0s-OFg"/>
+                <menuItem title="OS shell" id="YiP-H1-GtD" userLabel="OS shell">
+                    <modifierMask key="keyEquivalentModifierMask"/>
+                    <connections>
+                        <action selector="open_shell:" target="494" id="Y99-xn-ZUH"/>
+                    </connections>
+                </menuItem>
                 <menuItem title="Fleet-UI" id="lAb-dI-Mub" userLabel="Fleet-UI">
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <connections>
@@ -720,10 +721,16 @@
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <menu key="submenu" title="Updates" id="DFA-8C-ne3">
                         <items>
-                            <menuItem title="Check updates for vbox, fleetctl, etcdctl and fleet units" id="sEE-aC-0Ob">
+                            <menuItem title="Check updates for OS X fleetctl, etcdctl and fleet units" id="sEE-aC-0Ob">
                                 <modifierMask key="keyEquivalentModifierMask"/>
                                 <connections>
                                     <action selector="updates:" target="494" id="3Va-Du-QFm"/>
+                                </connections>
+                            </menuItem>
+                            <menuItem title="Check updates for VirtualBox" id="GeE-pc-UXF">
+                                <modifierMask key="keyEquivalentModifierMask"/>
+                                <connections>
+                                    <action selector="updateVbox:" target="494" id="boN-4h-9Wn"/>
                                 </connections>
                             </menuItem>
                             <menuItem title="Force CoreOS Update" id="KYE-xq-LpJ" userLabel="Force CoreOS update">
@@ -778,7 +785,7 @@
                     </connections>
                 </menuItem>
             </items>
-            <point key="canvasLocation" x="-132.5" y="383.5"/>
+            <point key="canvasLocation" x="-220.5" y="284.5"/>
         </menu>
     </objects>
 </document>
