--- a/src/CoreOS k8s Cluster/Base.lproj/MainMenu.xib
+++ b/src/CoreOS k8s Cluster/Base.lproj/MainMenu.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6751" systemVersion="14D87p" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1510" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6751"/>
@@ -721,22 +721,28 @@
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <menu key="submenu" title="Updates" id="DFA-8C-ne3">
                         <items>
-                            <menuItem title="Check updates for OS X fleetctl, etcdctl and fleet units" id="sEE-aC-0Ob">
+                            <menuItem title="Update Kubernetes cluster and OS X kubectl" id="sEE-aC-0Ob">
                                 <modifierMask key="keyEquivalentModifierMask"/>
                                 <connections>
-                                    <action selector="updates:" target="494" id="3Va-Du-QFm"/>
+                                    <action selector="update_k8s:" target="494" id="sO4-8I-toa"/>
+                                </connections>
+                            </menuItem>
+                            <menuItem title="Update OS X fleetctl, etcdctl and fleet units" id="KSz-fW-Vbe">
+                                <modifierMask key="keyEquivalentModifierMask"/>
+                                <connections>
+                                    <action selector="updates:" target="494" id="Zus-fv-0H4"/>
+                                </connections>
+                            </menuItem>
+                            <menuItem title="Force CoreOS VM Update" id="KYE-xq-LpJ" userLabel="Force CoreOS update">
+                                <modifierMask key="keyEquivalentModifierMask"/>
+                                <connections>
+                                    <action selector="force_coreos_update:" target="494" id="0IT-Vl-bUB"/>
                                 </connections>
                             </menuItem>
                             <menuItem title="Check updates for CoreOS vbox" id="GeE-pc-UXF">
                                 <modifierMask key="keyEquivalentModifierMask"/>
                                 <connections>
                                     <action selector="updateVbox:" target="494" id="boN-4h-9Wn"/>
-                                </connections>
-                            </menuItem>
-                            <menuItem title="Force CoreOS Update" id="KYE-xq-LpJ" userLabel="Force CoreOS update">
-                                <modifierMask key="keyEquivalentModifierMask"/>
-                                <connections>
-                                    <action selector="force_coreos_update:" target="494" id="0IT-Vl-bUB"/>
                                 </connections>
                             </menuItem>
                         </items>
