--- a/src/CoreOS k8s Cluster/Base.lproj/MainMenu.xib
+++ b/src/CoreOS k8s Cluster/Base.lproj/MainMenu.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1510" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6751" systemVersion="14D87p" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6751"/>
@@ -727,18 +727,21 @@
                                     <action selector="update_k8s:" target="494" id="sO4-8I-toa"/>
                                 </connections>
                             </menuItem>
+                            <menuItem isSeparatorItem="YES" id="Q48-Nq-5bm"/>
                             <menuItem title="Update OS X fleetctl, etcdctl and fleet units" id="KSz-fW-Vbe">
                                 <modifierMask key="keyEquivalentModifierMask"/>
                                 <connections>
                                     <action selector="updates:" target="494" id="Zus-fv-0H4"/>
                                 </connections>
                             </menuItem>
+                            <menuItem isSeparatorItem="YES" id="vyH-FE-ksB"/>
                             <menuItem title="Force CoreOS VM Update" id="KYE-xq-LpJ" userLabel="Force CoreOS update">
                                 <modifierMask key="keyEquivalentModifierMask"/>
                                 <connections>
                                     <action selector="force_coreos_update:" target="494" id="0IT-Vl-bUB"/>
                                 </connections>
                             </menuItem>
+                            <menuItem isSeparatorItem="YES" id="cQ6-UI-uan"/>
                             <menuItem title="Check updates for CoreOS vbox" id="GeE-pc-UXF">
                                 <modifierMask key="keyEquivalentModifierMask"/>
                                 <connections>
